# python-bootstrap

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  {{cookiecutter.file_name}}.py
{{cookiecutter.directory_name}}/.github/workflows/: main.yml
{{cookiecutter.directory_name}}/src/: {{cookiecutter.file_name}}.py
{{cookiecutter.directory_name}}/tests/: TestTemplate.py
