[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["BaDxKaRMa <24795160+BaDxKaRMa@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "7.4.0"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
line-length = 88
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

