[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["BaDxKaRMa <24795160+BaDxKaRMa@users.noreply.github.com>"]
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/BaDxKaRMa/{{cookiecutter.directory_name}}"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11.7"
loguru = "~0.7.2"
python-dotenv = "~1.0.1"

[tool.poetry.dev-dependencies]
black = "~24.2.0"
isort = "~5.13.2"
pytest = "~8.0.2"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
line-length = 88
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

